<resources>
    <string name="app_name">SEAndroid</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_users">Pesquisar</string>
    <string name="search_subject">assunto</string>
    <string name="search_location">local, bairro, cidade</string>
    <string name="search_result">Usuários</string>
    <string name="action_search">Pesquisar</string>
    <string name="page_contacts">Contatos</string>
    <string name="page_notifications">Notificações</string>
    <string name="page_knowledge">Conhecimentos</string>
    <string name="page_locations">Lugares</string>
    <string name="page_profile">Perfil</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Fazer login</string>
    <string name="error_invalid_login">Email ou senha inválidos</string>
    <string name="error_field_required">Este campo é necessário</string>
    <string name="page_profile_view_yours">Visualize seu perfil</string>
    <string name="page_profile_knowledge">Conhecimentos</string>
    <string name="page_profile_locations">Lugares</string>
    <string name="page_profile_preferences">Preferências</string>
    <string name="title_activity_profile_knowledge">ProfileKnowledgeActivity</string>
    <string name="action_settings">Settings</string>

</resources>
