<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".search.SearchFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="32dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/search_subject_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_subject" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/search_location_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_location" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="47dp">

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/search_users_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/search_users" />

</LinearLayout>