<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".page_profile.PageProfileFragment">

    <RelativeLayout
        android:id="@+id/page_profile_view_yours_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <ImageView
            android:id="@+id/page_profile_img"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:src="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@id/page_profile_img"
            android:layout_toRightOf="@id/page_profile_img"
            android:orientation="vertical">

            <TextView
                android:id="@+id/page_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Example name"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/page_profile_view_yours" />


        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="16dp"
        android:background="@color/divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page_profile_preferences"
        android:textAllCaps="true"
        android:textColor="@color/secondary_text" />

    <LinearLayout
        android:id="@+id/page_profile_knowledge_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/page_profile_knowledge"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/page_profile_location_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/page_profile_locations"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>